2007-12-31  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (soup_session_class_init): change
	the "authenticate" signal to include a SoupAuth rather than its
	components, and to have a "retrying" parameter rather than
	separating "authenticate" and "reauthenticate".

	* libsoup/soup-connection.c (soup_connection_class_init): Likewise

	* libsoup/soup-auth-manager.c (authenticate_auth): update

	* libsoup/soup-auth.c: make various attributes into gobject
	properties.
	(soup_auth_is_for_proxy): check whether an auth is plain or proxy
	(soup_auth_get_host): get the hostname associated with an auth

	* libsoup/soup-auth-ntlm.c: dummy class used by SoupConnectionNTLM
	in the authenticate signal

	* libsoup/soup-connection-ntlm.c (ntlm_authorize_pre): update for
	authenticate signals changes; use a fake SoupAuthNTLM to assist.

2007-12-20  Dan Winship  <danw@gnome.org>

	* libsoup/soup-message.c (soup_message_add_header_handler)
	(soup_message_add_status_code_handler): Make these be wrappers
	around g_signal_connect() rather than having a completely separate
	system.
	(soup_message_class_init): improve signal docs. Use
	"got_foo_signal_wrapper" to wrap the got-foo signals.
	(got_foo_signal_wrapper): Wraps the marshaller for the got-foo
	signals and cancels the signal emission if the message gets
	cancelled or requeued.
	(got_informational, got_headers, got_chunk, got_body): remove
	no-longer-needed default implementations.

	* libsoup/soup-message-handlers.c: gone

	* tests/ntlm-test.c (do_message): Simplify now that callback
	processing doesn't happen in two separate phases.

2007-12-20  Dan Winship  <danw@gnome.org>

	* libsoup/soup-auth-domain.c:
	* libsoup/soup-auth-domain-basic.c:
	* libsoup/soup-auth-domain-digest.c: New server-side auth system.

	* libsoup/soup-server.c: remove SoupServerAuth / SoupAuthContext
	stuff, add SoupAuthDomain support.
	(SoupServerCallbackFn): improve the args here